# cer-tests

./: CMakeLists.txt  README.md
example/cpp/: CMakeLists.txt  ExampleTest.cpp  ExampleTest.h
example/lua/: example-test.lua
src/: README.md
suites/: basics-cer.xml
suites/fixtures/: cersim-fixture.xml
suites/jenkins/: basics-cersim.xml
suits/: basics-cer.xml  jointsLimits.xml
suits/contexts/cer/: joints_limits_head.ini  joints_limits_left_arm.ini  joints_limits_right_arm.ini  joints_limits_torso.ini  robinterface_stream.ini
suits/jenkins/: basics-cersim.xml
